--- a/lucie-plagué/producteursLocaux/src/main/resources/application.properties
+++ b/lucie-plagué/producteursLocaux/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 
 ### Data properties ###
 # JDBC URL de la Base de données 
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot_bdd_producteur
+spring.datasource.url=jdbc:mysql://localhost:3306/springproject
 # Login username account of the database
-spring.datasource.username=padawan
+spring.datasource.username=root
 #login password account of the database
-spring.datasource.password=padawan
+spring.datasource.password=root
 
 
 
