--- a/xavier-saunier/producteur/src/main/resources/application.properties
+++ b/xavier-saunier/producteur/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 # URL de la Base de données
-spring.datasource.url=jdbc:mysql://localhost:3306/ajc
+spring.datasource.url=jdbc:mysql://localhost:3306/springproject?serverTimezone=UTC
 # username DB
 spring.datasource.username=root
 # password DB
 spring.datasource.password=root
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
